--- a/index.css
+++ b/index.css
@@ -53,6 +53,7 @@ header p {
 
 .search-box input {
   display: block;
+  font-size: 20px;
   appearance: none;
   -webkit-appearance: none;
   outline: none;
@@ -71,6 +72,7 @@ header p {
 .results {
   max-width: 768px;
   margin: 0 auto;
+  padding-top: 15px;
 }
 
 .result {
@@ -94,7 +96,7 @@ header p {
 
 .result p {
   color: #313131;
-  font-size: 18px;
+  font-size: 15px;
   margin-bottom: 16px;
 }
 
